[JSC] Fix AVX function invocation ordering in X86 MacroAssembler https://bugs.webkit.org/show_bug.cgi?id=249126 rdar://103244554

Reviewed by Justin Michaud.

We now applied strict consistent rule to X86Assembler for all AVX methods: using AT&T ordering,
and fixing all randomly ordered functions. This patch fixes MacroAssembler's invocation with wrong
ordering based on this new rule.

* Source/JavaScriptCore/assembler/MacroAssemblerX86_64.h:
(JSC::MacroAssemblerX86_64::compareFloatingPointVector):
(JSC::MacroAssemblerX86_64::compareIntegerVector):
(JSC::MacroAssemblerX86_64::vectorAdd):
(JSC::MacroAssemblerX86_64::vectorSub):
(JSC::MacroAssemblerX86_64::vectorMul):
(JSC::MacroAssemblerX86_64::vectorDiv):
(JSC::MacroAssemblerX86_64::vectorAnd):
(JSC::MacroAssemblerX86_64::vectorAndnot):
(JSC::MacroAssemblerX86_64::vectorOr):
(JSC::MacroAssemblerX86_64::vectorXor):
(JSC::MacroAssemblerX86_64::vectorExtendLow):
(JSC::MacroAssemblerX86_64::vectorExtendHigh):
(JSC::MacroAssemblerX86_64::vectorDotProductInt32):
* Source/JavaScriptCore/assembler/X86Assembler.h:
(JSC::X86Assembler::vpmovsxbw_rr):
(JSC::X86Assembler::vpmovzxbw_rr):
(JSC::X86Assembler::vpmovsxwd_rr):
(JSC::X86Assembler::vpmovzxwd_rr):
(JSC::X86Assembler::vpmovsxdq_rr):
(JSC::X86Assembler::vpmovzxdq_rr):
(JSC::X86Assembler::vupckhpd_rrr):
(JSC::X86Assembler::vpmovsxbw): Deleted.
(JSC::X86Assembler::vpmovzxbw): Deleted.
(JSC::X86Assembler::vpmovsxwd): Deleted.
(JSC::X86Assembler::vpmovzxwd): Deleted.
(JSC::X86Assembler::vpmovsxdq): Deleted.
(JSC::X86Assembler::vpmovzxdq): Deleted.
(JSC::X86Assembler::vupckhpd): Deleted.

Canonical link: https://commits.webkit.org/257747@main